Slight code simplification using `List.of(…)` and `Stream.toList()`. A difference between `List.of()` and `Collections.emptyList()` is that the former throws a `NullPointerException` when `List.contains(null)`, which sometime help to spot bugs.